--- a/css/exercicis-css/bg-br.css
+++ b/css/exercicis-css/bg-br.css
@@ -1,7 +1,11 @@
 body {
 	background-color: yellow;
-	background-image: url('Degradat.png');
-	background-cover: 
+	background-image: url(css.png), url('Degradat.png');
+	background-position: right top, left top;
+	background-repeat: no-repeat, no-repeat;
+	background-size: auto, cover;
+	background-attachment: scroll, fixed;
+	/* background: yellow, url(css.png) right-top auto no-repeat scroll, url(Degradat.png) left-top cover no-repeat fixed; */
 }
 
 h2 {
@@ -10,8 +14,27 @@ h2 {
 
 #p11, #p12 {
 	background-color: rgb(138, 43, 226);
+	border-style: dotted;
+	border-width: 4px;
 }
 
 #p21, #p22 {
 	background-color: #ff69b4;
+	border-style: dotted;
+	border-width: 8px;
+}
+
+#p1 {
+	text-align: center;
+	border-color: red;
+	border-style: dotted solid;
+	border-width: 10px;
+	border-radius: 25px
+}
+
+#p2 {
+	text-align: center;
+	border-color: blue red green;
+	border-style: dotted dashed solid;
+	border-width: 5px;
 }
