--- a/css/exercicis-css/bg-br.css
+++ b/css/exercicis-css/bg-br.css
@@ -1,15 +1,23 @@
 body {
-	background-color: yellow;
+	/* background-color: yellow;
 	background-image: url('css.png'), url('Degradat.png');
 	background-position: right top, left top;
 	background-repeat: no-repeat, no-repeat;
+	background-attachment: scroll, fixed; */
+	background: url(css.png) no-repeat right top scroll, url(Degradat.png) no-repeat fixed, yellow;
 	background-size: auto, cover;
-	background-attachment: scroll, fixed;
-	/* background: yellow, url(css.png) right-top auto no-repeat scroll, url(Degradat.png) left-top cover no-repeat fixed; */
 }
 
 h2 {
 	background-color: LightBlue;
+}
+
+#h21 {
+	border: solid 6px;
+}
+
+#h22 {
+	border: double 6px;
 }
 
 #p11, #p12 {
@@ -22,13 +30,20 @@ h2 {
 	background-color: #ff69b4;
 	border-style: dotted;
 	border-width: 8px;
+	border-bottom: dashed orange 8px;
+}
+
+#p22 {
+	background-color: #ff69b4;
+	border-style: dotted;
+	border-width: 5px 10px;
 }
 
 #p1 {
 	text-align: center;
 	border-color: red;
 	border-style: dotted solid;
-	border-width: 10px;
+	border-width: 5px 10px;
 	border-radius: 25px
 }
 
