--- a/css/exercicis-css-5/padding.css
+++ b/css/exercicis-css-5/padding.css
@@ -5,18 +5,18 @@
 
 #parau {
 	margin: inherit;
-	border: solid black 1px;
+	/* border: solid black 1px; */
 }
 
 #h2u {
 	align: center;
 	width: 125px;
-	border: solid black 1px;
+	/* border: solid black 1px; */
 }
 
 #parados {
 	margin: 0 20%;
-	border: solid black 1px;
+	/* border: solid black 1px; */
 }
 
 #divdos {
