--- a/css/exercicis-css-6/exercici.css
+++ b/css/exercicis-css-6/exercici.css
@@ -1,14 +1,48 @@
 body {
 	background: olive;
-	align: auto;
+}
+
+#titol {
+	color: white;
+	text-align: center;
+	text-shadow: 3px 3px black;
+	text-transform: uppercase;
 }
 
 .dots-w {
-	border: dotted white;
+	margin: auto;
+	border: dotted white 1px;
+	width: 400px;
+	align: center;
 }
 
 .dots-r {
 	border: dotted red;
-	border-radius: 5px;
+	border-radius: 10px;
+	padding: 10px;
+	background: white;
+	margin: 5px;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
+.ou {
+	float: left;
+	border: solid white 8px;
+	background: orange;
+	font-family: monospace;
+	width: 500px;
+	line-height: 25px;
+	word-spacing: 7px
+}
+
+.et {
+	padding: 10px 15px;
+	width: 500px;
+	float: right;
+	border: dashed black 7px;
+	background: white;
+	color: black;
+	text-align: right;
+	text-transform: uppercase;
+	border-radius: 0px 5px 5px 0px;
+}
