--- a/css/exercicis-css-6/exercici.css
+++ b/css/exercicis-css-6/exercici.css
@@ -13,7 +13,7 @@ body {
 	margin: auto;
 	outline: dotted white 1px;
 	outline-offset: 5px;
-	width: 400px;
+	width: 500px;
 	align: center;
 	border: dotted red;
 	border-radius: 10px;
@@ -31,6 +31,7 @@ body {
 } */
 
 .ou {
+	margin: 25px 0px;
 	border: solid white 8px;
 	background: orange;
 	font-family: monospace;
@@ -43,11 +44,66 @@ body {
 .et {
 	padding: 10px 15px;
 	width: 500px;
-	margin-left: auto;
+	margin: 25px 0px 25px auto;
 	border: dashed black 7px;
 	background: white;
 	color: black;
 	text-align: right;
 	text-transform: uppercase;
 	border-radius: 0px 5px 5px 0px;
+}
+
+.blau {
+	margin: 25px auto;
+	padding: 8px;
+	width: 500px;
+	border: dashed blue 3px;
+	color: white;
+	text-decoration: line-through;
+	background: darkblue;
+}
+
+.rosa {
+	outline: dashed pink 3px;
+	outline-offset: 5px;
+	margin: 25px 5px;
+	border: double black 3px;
+	border-radius: 0px 5px 5px 0px;
+	background: pink;
+	padding: 5px 1px;
+}
+
+.verd {
+	margin: 25px auto;
+	width: 500px;
+	border: dotted white 2px;
+	color: white;
+	background: green;
+	padding: 10px;
+	text-align: center;
+	line-height: 25px;
+}
+
+.roig {
+	margin: 25px auto;
+	width: 500px;
+	border: solid white 2px;
+	border-radius: 0px 0px 5px 0px;
+	color: white;
+	background: red;
+	padding: 10px;
+	text-align: center;
+	word-spacing: 50px;
+}
+
+.revers {
+	margin: 25px auto;
+	width: 500px;
+	padding: 3px 2px;
+	border: solid white 2px;
+	border-radius: 0px 0px 5px 0px;
+	background: black;
+	color: white;
+	direction: rtl;
+	unicode-bidi: bidi-override;
 }
