--- a/css/exercicis-css-7/videojocs.css
+++ b/css/exercicis-css-7/videojocs.css
@@ -25,7 +25,7 @@ p {
 	text-decoration: underline;
 	word-spacing: -20px;
 	margin: auto auto 50px auto;
-	width: 31.83%;
+	width: 678px;
 }
 
 .allcaps {
