Coses sobre l'html L'he fet compatible per a la raspberry.

--- a/Aplicacions-Web/html/exercicis/css/master.css
+++ b/Aplicacions-Web/html/exercicis/css/master.css
@@ -16,3 +16,13 @@ body {
   text-align: center;
   font-variant: small-caps;
 }
+
+.dcenter {
+  width: 100px;
+  margin: auto;
+}
+
+.subdcenter {
+  float: left;
+  margin-left: auto;
+}
