--- a/saia/css/w3.css
+++ b/saia/css/w3.css
@@ -183,7 +183,10 @@ a {
   color:inherit
 }
 .w3-table,.w3-table-all {border-collapse:collapse;border-spacing:0;width:100%;display:table}.w3-table-all {border:1px solid #ccc}
-.w3-bordered tr,.w3-table-all tr {border-bottom:1px solid #ddd}.w3-striped tbody tr:nth-child(even){background-color:#f1f1f1}
+.w3-bordered tr,.w3-table-all tr {border-bottom:1px solid #ddd}
+.w3-striped tbody tr:nth-child(even) {
+  background-color:#1f1f1f
+}
 .w3-table-all tr:nth-child(odd){background-color:#fff}.w3-table-all tr:nth-child(even){background-color:#f1f1f1}
 .w3-hoverable tbody tr:hover,.w3-ul.w3-hoverable li:hover {background-color:#ccc}.w3-centered tr th,.w3-centered tr td {text-align:center}
 .w3-table td,.w3-table th,.w3-table-all td,.w3-table-all th {padding:8px 8px;display:table-cell;text-align:left;vertical-align:top}
