--- a/html/activitat4/css/master.css
+++ b/html/activitat4/css/master.css
@@ -1,16 +1,15 @@
-body { background-color: #eee; color: #111; margin: 0 auto;}
+body { background-color: #eee; color: #111; margin: 0 auto; }
 h1 { text-align: center; }
 table { text-align: center; border-collapse: collapse; }
 td, th { border: 1pt solid red; padding: 10px 5px; }
 img.in-table { height: 190px; width: auto; }
-/* #freq { text-emphasis-color: red; } */
-#blafluix {
+#intelblafluix {
   background-color: #0071c5;
   width: 15px;
   height: 15px;
   display: inline-block;
 }
-#blaufort {
+#intelblaufort {
   background-color: #0a63ff;
   width: 15px;
   height: 15px;
@@ -22,6 +21,13 @@ img.in-table { height: 190px; width: auto; }
   height: 15px;
   display: inline-block;
 }
+#gold {
+  background-color: #ffd700;
+  width: 15px;
+  height: 15px;
+  display: inline-block;
+}
+.right { text-align: right; }
 .gris {
   background-color: #aaa;
   width: 15px;
@@ -30,12 +36,6 @@ img.in-table { height: 190px; width: auto; }
 }
 .negre {
   background-color: #000;
-  width: 15px;
-  height: 15px;
-  display: inline-block;
-}
-#gold {
-  background-color: #ffd700;
   width: 15px;
   height: 15px;
   display: inline-block;
