--- a/html/activitat5/css/master.css
+++ b/html/activitat5/css/master.css
@@ -1,5 +1,5 @@
-a:link { text-decoration: none; }
-a:visited { color: darkgray; }
+a:link { text-decoration: none; color: green}
+a:visited { color: red; }
 a:hover { color: white; }
 body { background-color: #000;
       color: darkgray;
