--- a/html/activitat6/css/master.css
+++ b/html/activitat6/css/master.css
@@ -16,3 +16,9 @@ input[type=text], input[type=mail], input[type=date]{
   margin-left: 40%;
   margin-right: 35%;
 }
+
+fieldset > div {
+  width: 100%;
+  height: 100%;
+  background-color: #222;
+}
