Added entry fot Activitat 7, changed fonts

--- a/html/menu/css/master.css
+++ b/html/menu/css/master.css
@@ -1,6 +1,7 @@
 body {
   background-color: #111;
-  color: #eee
+  color: #eee;
+  font-family: Roboto, Roboto Mono, Liberation Sans, Arial, sans-serif;
 }
 
 ul {
