--- a/html/menu/activitat7/css/master.css
+++ b/html/menu/activitat7/css/master.css
@@ -12,6 +12,12 @@ table {
   text-align: center;
 }
 
+footer {
+  background-color: #222;
+  color: inherit;
+  font-size: 12px;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr;
@@ -32,4 +38,8 @@ table {
 .fullwd {
   margin: auto;
   display: block;
+}
+
+p.foot {
+  padding: 15px 0px;
 }
