Minor changes to index.html, and moved activities to be accessible from menu

--- a/html/menu/css/master.css
+++ b/html/menu/css/master.css
@@ -4,6 +4,10 @@ body {
   font-family: Roboto, Roboto Mono, Liberation Sans, Arial, sans-serif;
 }
 
+.container {
+  grid-template-columns: 4fr
+}
+
 ul {
   list-style-type: none;
   margin: 0;
