--- a/html/menu/activitat9/css/master.css
+++ b/html/menu/activitat9/css/master.css
@@ -1,3 +1,8 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #222;
   color: #ddd;
@@ -12,11 +17,12 @@ img {
   width: 100%;
 }
 
-#navtop:hover, #navleft:hover { background-color: #999; color: #000; }
+#navtop>div:hover, #navleft>div:hover { background-color: #999; color: #000; }
 
 #navtop, #navleft {
   background-color: #000;
   float: left;
+  /* overflow: hidden; */
 }
 
 #navtop {
@@ -34,14 +40,16 @@ img {
 #navleft {
   width: 10%;
   margin: 2% auto auto;
-  height: 150%;
+  /* height: 100%; */
+  padding-bottom: 25%;
 }
 
 #navleft>div {
-  width: 90%;
+  width: 100%;
   float: left;
   padding: 0.5em;
   text-align: left;
+  box-sizing: border-box;
 }
 
 .content {
@@ -59,6 +67,7 @@ img {
   border-radius: 10px;
   overflow: hidden;
   border: solid white 2px;
+  box-sizing: border-box;
 }
 
 .p-columns {
@@ -66,5 +75,16 @@ img {
   float: left;
   width: 33%;
   padding: 3%;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
+
+#footer {
+  box-sizing: border-box;
+  background-color: #000;
+  text-align: center;
+  width: 100%;
+  padding: 4rem;
+  clear: both;
+  display: block;
+}
+
