--- a/html/menu/activitat10/css/master.css
+++ b/html/menu/activitat10/css/master.css
@@ -2,10 +2,23 @@ body {
   margin: 0;
   /* color: #5578bb */
   color: #57b;
+  font-family: sans-serif;
 }
 
 main {
   clear: both;
+  float: left;
+  margin: 5% auto;
+  /* text-align: center; */
+  font-family: serif;
+}
+
+img {
+  /* width: 33%; */
+  margin: 0;
+  box-sizing: border-box;
+  height: 100%;
+  display: block;
 }
 
 #navtop, #search {
@@ -70,11 +83,52 @@ main {
   display: inline-block;
 }
 
-.has-dropdwn:hover>.dropdwn { display: block; }
-
-.dropdwn {
-  position: relative;
-  display: none;
+.has-dropdwn:hover .dropdwn {
+  /* visibility: visible; */
+  display: block;
 }
 
-.dropdwn-elem {}
+.dropdwn {
+  position: absolute;
+  /* visibility: hidden; */
+  display: none;
+  clear: both;
+  background-color: #57b;
+  color: white;
+  box-sizing: border-box;
+  left: auto;
+  margin: 0.75em 0;
+  width: 25%;
+}
+
+.dropdwn-elem {
+  box-sizing: border-box;
+  /* height: 25%; */
+  padding: 0.5em;
+  /* width: 100%; */
+  /* height: inherit; */
+}
+
+.dropdwn-elem:hover {
+  background-color: #a8dbff;
+  padding: 0.5em;
+}
+
+.big {
+  width: 75%;
+  font-size: 1.5vw;
+}
+
+.img-holder {
+  float: left;
+  /* width: 90%; */
+  /* height: 50%; */
+  /* margin: 1%; */
+  box-sizing: border-box;
+  border: solid #57b 0.25em;
+}
+
+.img-container {
+  float: left;
+  margin: 0;
+}
